fix layout on small screens

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -207,8 +207,8 @@ li {
     text-align: center;
 	color: #666;
     width: 100%;
-    position: absolute;
-    bottom: 0;
+   # position: absolute;
+   # bottom: 0;
     padding: 10px;
 }
 #gotop {
